feat: update exhibition
